# RustWeb

./: .gitignore  Cargo.toml  README.md  data.db  index.html
backend/: Cargo.toml
backend/src/: app.rs  main.rs  routes.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs  routes.rs
backend/src/forum/: handlers.rs  mod.rs  models.rs  routes.rs
backend/src/sports/: handlers.rs  models.rs  routes.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  app.rs  lib.rs  main.rs  state.rs  utils.rs
frontend/src/components/: card.rs  footer.rs  mod.rs  navbar.rs  post_preview.rs
frontend/src/pages/: auth.rs  forum.rs  home.rs  mod.rs  profile.rs  sport.rs
shared/: Cargo.toml
shared/src/: models.rs
src/: main.rs
static/: auth.html  forum.html
